--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-touch": "^1.4.0"
   },
   "devDependencies": {
-    "angular-mocks": "^1.4.0"
+    "angular-mocks": "^1.4.0",
+    "angular-material": "^1.0.6"
   },
   "appPath": "app",
   "moduleName": "lbawApp",
